--- a/package.json
+++ b/package.json
@@ -4,5 +4,8 @@
   "main": "index.js",
   "repository": "https://github.com/yhsTW/bff-playground.git",
   "author": "YHS-mac <yhs0823@twinny.co.kr>",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "express": "^4.18.2"
+  }
 }
