--- a/package.json
+++ b/package.json
@@ -6,6 +6,10 @@
   "author": "YHS-mac <yhs0823@twinny.co.kr>",
   "license": "MIT",
   "dependencies": {
-    "express": "^4.18.2"
+    "apollo-server-express": "^3.13.0",
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "graphql": "^16.8.1",
+    "node-fetch": "2"
   }
 }
