instances 위치 수정 및 .env.example 값 추가

--- a/.env.example
+++ b/.env.example
@@ -2,6 +2,8 @@
 PORT=
 # [필수] TARAS 서버 정보입니다.
 TARAS_ENDPOINT=
+# [필수] TARAS 인증 토큰입니다.
+TARAS_TOKEN=
 # [필수] TARP 서버 정보입니다.
 TARP_ENDPOINT=
 # [필수] TARP 인증 토큰입니다.
