--- a/package.json
+++ b/package.json
@@ -1,18 +1,23 @@
 {
-    "name": "bff-playground",
-    "version": "1.0.0",
-    "main": "index.js",
-    "repository": "https://github.com/yhsTW/bff-playground.git",
-    "author": "YHS-mac <yhs0823@twinny.co.kr>",
-    "license": "MIT",
-    "scripts": {
-        "start": "node src/index.js"
-    },
-    "dependencies": {
-        "apollo-server-express": "^3.13.0",
-        "dotenv": "^16.3.1",
-        "express": "^4.18.2",
-        "graphql": "^16.8.1",
-        "node-fetch": "2"
-    }
+  "name": "bff-playground",
+  "version": "1.0.0",
+  "main": "index.js",
+  "repository": "https://github.com/yhsTW/bff-playground.git",
+  "author": "YHS-mac <yhs0823@twinny.co.kr>",
+  "license": "MIT",
+  "scripts": {
+    "start": "node src/index.js"
+  },
+  "dependencies": {
+    "@apollo/server": "^4.9.5",
+    "@graphql-tools/schema": "^10.0.2",
+    "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "graphql": "^16.8.1",
+    "graphql-subscriptions": "^2.0.0",
+    "graphql-ws": "^5.14.2",
+    "node-fetch": "2",
+    "ws": "^8.15.1"
+  }
 }
