--- a/.env.example
+++ b/.env.example
@@ -2,6 +2,8 @@
 PORT=
 # [필수] TARAS 서버 정보입니다.
 TARAS_ENDPOINT=
+# [필수] TARAS WS 정보입니다.
+TARAS_WS_ENDPOINT=
 # [필수] TARAS 인증 토큰입니다.
 TARAS_TOKEN=
 # [필수] TARP 서버 정보입니다.
